Removed coffee shit and just made it the workout app.

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"> 
-  <title>WORKOUT</title>
+  <title>DKS Industries - Workout Shout</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 <body>
-
   <div class="container theme-showcase" role="main">
 
     <div class="page-header">
@@ -15,7 +14,7 @@
     
     <div class="text-center">
       <h2>
-        <span id="time" class="label label-primary">00:00:00</span>
+        <span id="timer" class="label label-primary">00:00:00</span>
       </h2>
     </div>
 
@@ -46,9 +45,9 @@
   </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/1.1.25/howler.min.js"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="main.min.js"></script>
+<script src="js/main.min.js"></script>
 </body>
 </html>
